# Compass

./: .cursorignore  .dockerignore  .gitignore  AIWA.md  Graudation-project-template.docx  LICENSE  PROJECT_DOCUMENTATION.md  README.md  SECURITY.md  Start.bat  bash.exe.stackdump  cert.sh  dump.rdb  nginx-local.conf  nginx.conf  package 2.json  package-lock 2.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_request.json  test_tool.py
.cursor/rules/: python.mdc  typescript-rules.mdc
Backend/: .env  Dockerfile  alembic.ini  main.py  network_check.py  pytest.ini  requirements.txt  setup.py  test_connection.py  training_data.jsonl
Backend/api/: agents.py  (+19 more)
Backend_go/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  test-services.ps1  test-services.sh  test_mcp.json
Frontend/: AIWA FINAL DOC.md  Dockerfile  index.html  main.js  nginx.conf  package-lock 2.json  package-lock.json  package.json  tailwind.config.js  test.js  tsconfig.app.json  vite.config.ts
configs/: .env  alembic.ini  dev_config.json  logging_config.json  prod_config.json  security_config.json
logs/: Backend.utils.cache_utils.log.2025-03-17  __main__.log.2025-03-17
nginx/: Dockerfile  nginx.conf
notes-server/: .dockerignore  Dockerfile  apollo-journal-subscription-test.js  apollo-note-subscription-test.js  package-lock.json  package.json  server.js
scripts/: check_schema.py  db_setup.py
src/: dependencies.py  main.py
tests/: conftest.py  requirements-test.txt  test_auth.py  test_config.py  test_tasks.py
(+885 files in other folders)
