[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiwa"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "AI Workflow Automation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
